Fix nav component z-index

--- a/frontend/src/components/nav/Nav.module.css
+++ b/frontend/src/components/nav/Nav.module.css
@@ -11,6 +11,8 @@
   height: var(--nav-height);
 
   background-color: var(--darker);
+
+  z-index: 10;
 }
 
 .back {
